--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html> <!-- lang="en" -->
+<html lang="fr"> <!--  -->
 
 <head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Nina Carducci</title><!-- title -->
+	<meta name="description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux.">
+	<title>Portfolio de Nina Carducci</title><!-- title -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,17 +13,17 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+
 </head>
 
 <body>
 	<header class="top-header"> <!-- balise header -->
-		<h3 class="name">Nina Carducci</h3>
+		<h1 class="name">Nina Carducci</h1>
 		<nav class="nav"> <!-- balise nav -->
 			<ul>
 				<li><a href="#about">À propos</a></li>
@@ -35,7 +37,7 @@
 		</nav>
 	</header>
 	<main><!-- balise main -->
-		<section id="header"> <!-- div ?? -->
+		<div id="header"> <!-- div ?? -->
 
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
@@ -71,12 +73,12 @@
 					<span class="visually-hidden">Next</span> <!-- span ?? -->
 				</button>
 			</div>
-		</section>
+		</div>
 		<section id="about"> <!-- div ?? -->
-			<article class="picture left">
+			<div class="picture left">
 				<img src="./assets/images/nina.png" alt="portrait nina"> <!-- alt ?? -->
-			</article>
-			<article id="about-me"> <!-- id ?? -->
+			</div>
+			<div id="about-me"> <!-- id ?? -->
 				<h3 class="about-me__title">A propos de moi</h3>
 				<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
@@ -91,11 +93,11 @@
 					technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de
 					la
 					tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
-			</article>
+			</div>
 		</section>
 		<section id="gallery"> <!-- div ?? -->
 			<h3 class="title">Portfolio</h3>
-			<article class="container py-3">
+			<div class="container py-3">
 				<div class="gallery" style="display: none"> <!-- style ?? -->
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="image_1">
@@ -127,19 +129,19 @@
 						alt="image_9">
 					<!-- alt ?? + / inutile -->
 				</div>
-			</article>
-			<article class="quote">
+			</div>
+			<div class="quote">
 				<figure>
 					<blockquote>
-						<h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
+						<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un
 							fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude
 							n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la
 							vérité.
-						</h1> <!-- h1 ?? -->
+						</p> <!-- h1 ?? -->
 					</blockquote>
 					<figcaption class="quote__author">- Richard Avedon</figcaption>
 				</figure>
-			</article>
+			</div>
 		</section>
 		<section id="services"> <!-- div ?? -->
 			<h3 class="title">Mes services</h3>
@@ -182,16 +184,16 @@
 				</div>
 			</div>
 		</section>
-		<section class="quote">
+		<div class="quote">
 			<figure>
 				<blockquote>
-					<h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
-						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+					<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des
+						traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 					<!-- h1 ?? -->
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
-		</section>
+		</div>
 		<footer id="contact">
 			<div class="container">
 				<div class="form-container">
@@ -214,5 +216,6 @@
 		</footer>
 	</main>
 </body> <!-- balise footer ?? -->
+
 
 </html>
