optimisation images slider

--- a/index.html
+++ b/index.html
@@ -50,16 +50,22 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
-							alt="ryoji"> <!-- alt plus explicite -->
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
+							srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg 1170w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600.jpg 600w"
+							sizes="(max-width: 1170px) 100vw, 1170px" class="d-block w-100" alt="ryoji">
+						<!-- alt plus explicite -->
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
-							alt="nicholas"> <!-- alt plus explicite -->
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
+							srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg 1170w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-600.jpg 600w"
+							sizes="(max-width: 1170px) 100vw, 1170px" class="d-block w-100" alt="nicholas">
+						<!-- alt plus explicite -->
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
-							alt="edward"> <!-- alt plus explicite -->
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
+							srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg 1170w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-600.jpg 600w"
+							sizes="(max-width: 1170px) 100vw, 1170px" class="d-block w-100" alt="edward">
+						<!-- alt plus explicite -->
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
