optimisation images gallery

--- a/index.html
+++ b/index.html
@@ -106,33 +106,49 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none"> <!-- style ?? -->
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" alt="image_1">
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
+						srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg 1170w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-600.jpg 600w"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_1">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" alt="image_2">
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
+						srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg 1170w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_2">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" alt="image_3">
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
+						srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg 1170w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_3">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" alt="image_4">
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
+						srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg 1170w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_4">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" alt="image_5">
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
+						srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg 1170w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_5">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" alt="image_6">
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
+						srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg 1170w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_6">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-						alt="image_7">
+						srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg 1170w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_7">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" alt="image_8">
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
+						srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg 1170w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_8">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						alt="image_9">
+						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg 1170w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-600.jpg"
+						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_9">
 					<!-- alt ?? + / inutile -->
 				</div>
 			</div>
