--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux.">
 	<title>Portfolio de Nina Carducci</title><!-- title -->
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/maugallery.js" defer></script>
-	<script src="./assets/scripts.js" defer></script>
+		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery.min.js"></script>
+	<script src="./assets/scripts.min.js"></script>
 
 </head>
 
@@ -50,21 +50,21 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg"
-							srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg 1170w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600.jpg 600w"
-							sizes="(max-width: 1170px) 100vw, 1170px" class="d-block w-100" alt="ryoji">
+						<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp"
+							srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1200w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600.webp 600w"
+							sizes="(max-width: 1200px) 100vw, 1200px" class="d-block w-100" alt="ryoji">
 						<!-- alt plus explicite -->
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg"
-							srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg 1170w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-600.jpg 600w"
-							sizes="(max-width: 1170px) 100vw, 1170px" class="d-block w-100" alt="nicholas">
+						<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp"
+							srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp 1200w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-600.webp 600w"
+							sizes="(max-width: 1200px) 100vw, 1200px" class="d-block w-100" alt="nicholas">
 						<!-- alt plus explicite -->
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg"
-							srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg 1170w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-600.jpg 600w"
-							sizes="(max-width: 1170px) 100vw, 1170px" class="d-block w-100" alt="edward">
+						<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp"
+							srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1200w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-600.webp 600w"
+							sizes="(max-width: 1200px) 100vw, 1200px" class="d-block w-100" alt="edward">
 						<!-- alt plus explicite -->
 					</div>
 				</div>
@@ -82,7 +82,7 @@
 		</div>
 		<section id="about"> <!-- div ?? -->
 			<div class="picture left">
-				<img src="./assets/images/nina.png" alt="portrait nina"> <!-- alt ?? -->
+				<img src="./assets/images/nina.webp" alt="portrait nina"> <!-- alt ?? -->
 			</div>
 			<div id="about-me"> <!-- id ?? -->
 				<h3 class="about-me__title">A propos de moi</h3>
@@ -106,49 +106,49 @@
 			<div class="container py-3">
 				<div class="gallery" style="display: none"> <!-- style ?? -->
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"
-						srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg 1170w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-600.jpg 600w"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_1">
+						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+						srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp 1200w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-600.webp 600w"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_1">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"
-						srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg 1170w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_2">
+						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+						srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp 1200w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_2">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"
-						srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg 1170w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_3">
+						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+						srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp 1200w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_3">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"
-						srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg 1170w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_4">
+						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+						srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp 1200w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_4">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"
-						srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg 1170w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_5">
+						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+						srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp 1200w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_5">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
-						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"
-						srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg 1170w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_6">
+						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+						srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp 1200w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_6">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
-						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"
-						srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg 1170w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_7">
+						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+						srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp 1200w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_7">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Concert" class="gallery-item"
-						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"
-						srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg 1170w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_8">
+						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+						srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp 1200w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_8">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
-						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"
-						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg 1170w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-600.jpg"
-						sizes="(max-width: 1170px) 100vw, 1170px" alt="image_9">
+						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp 1200w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-600.webp"
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_9">
 					<!-- alt ?? + / inutile -->
 				</div>
 			</div>
@@ -232,7 +232,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera.png" alt="camera"> <!-- alt ?? -->
+					<img src="./assets/images/camera.webp" alt="camera"> <!-- alt ?? -->
 				</div>
 			</div>
 		</footer>
