--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr"> <!--  -->
+<html lang="fr"> <!-- ajout lang -->
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux.">
+	<meta name="description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux."> <!-- balise meta -->
 	<title>Portfolio de Nina Carducci</title><!-- title -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
@@ -18,6 +18,41 @@
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/maugallery.min.js"></script>
 	<script src="./assets/scripts.min.js"></script>
+
+	<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "ProfessionalService",
+		  "name": "Nina Carducci",
+		  "url": "https://hugolgle.github.io/ninacarducci/",
+		  "image": "https://hugolgle.github.io/ninacarducci/assets/images/nina.webp",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"addressRegion": "Nouvelle-Aquitaine",
+			"postalCode": "33200",
+			"addressCountry": "France"
+		  },
+		  "openingHours": ["Mo-Fr 10:00-19:00"],
+		  "telephone": "+556677889",
+		  "priceRange": "De 50€ par photo retouchée à 350€ par demi journée pour un shooting et 400€ l'album"
+		}
+	</script>
+
+	<meta property="og:site_name" content="Nina Carducci" />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://hugolgle.github.io/ninacarducci/" />
+	<meta property="og:title" content="Nina Carducci - Portfolio" />
+	<meta property="og:description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux." />
+	<meta property="og:image" content="https://hugolgle.github.io/ninacarducci/assets/images/nina.webp" />
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:site" content="https://hugolgle.github.io/ninacarducci/">
+	<meta name="twitter:title" content="Nina Carducci">
+	<meta name="twitter:description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux.">
+	<meta name="twitter:image" content="https://hugolgle.github.io/ninacarducci/assets/images/nina.webp">
+	<meta property="twitter:url" content="https://hugolgle.github.io/ninacarducci/">
 
 </head>
 
@@ -222,11 +257,11 @@
 					<h3>Une question ? Une demande de devis ?</h3>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 					<form method="post"> <!-- action ?? -->
-						<label>Nom</label>
+						<label for="nom">Nom</label> <!-- for ?? -->
 						<input type="text" name="nom" id="nom">
-						<label>Email</label>
+						<label for="email">Email</label> <!-- for ?? -->
 						<input type="email" name="email" id="email">
-						<label>Message</label>
+						<label for="message">Message</label> <!-- for ?? -->
 						<textarea name="message" id="message" cols="30" rows="10"></textarea>
 						<input type="submit" value="Envoyer"> <!-- / inutile -->
 					</form>
