--- a/index.html
+++ b/index.html
@@ -143,47 +143,47 @@
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
 						srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp 1200w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-600.webp 600w"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_1">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_1" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
 						srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp 1200w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_2">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_2" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
 						srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp 1200w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_3">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_3" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
 						srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp 1200w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_4">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_4" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
 						srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp 1200w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_5">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_5" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
 						srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp 1200w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_6">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_6" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
 						srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp 1200w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_7">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_7" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
 						srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp 1200w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_8">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_8" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
 						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp 1200w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_9">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_9" loading="lazy">
 					<!-- alt ?? + / inutile -->
 				</div>
 			</div>
