--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Portfolio de Nina Carducci, photographe basée a Bordeaux."> <!-- balise meta -->
+	<meta name="description" content="Portfolio de Nina Carducci, photographe basée à Bordeaux."> <!-- balise meta -->
 	<title>Portfolio de Nina Carducci</title><!-- title -->
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
@@ -120,10 +120,10 @@
 				<img src="./assets/images/nina.webp" alt="portrait nina"> <!-- alt ?? -->
 			</div>
 			<div id="about-me"> <!-- id ?? -->
-				<h3 class="about-me__title">A propos de moi</h3>
-				<h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
+				<h2 class="about-me__title">A propos de moi</h2>
+				<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais
 					prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre
-					immortels, voilà ce qui me fait vibrer.</h6> <!-- h6 ?? -->
+					immortels, voilà ce qui me fait vibrer.</h3> <!-- h6 ?? -->
 				<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie :
 					le
 					figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos
@@ -137,53 +137,53 @@
 			</div>
 		</section>
 		<section id="gallery"> <!-- div ?? -->
-			<h3 class="title">Portfolio</h3>
+			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none"> <!-- style ?? -->
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
 						srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp 1200w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-600.webp 600w"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_1" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="aaron paul" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
 						srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp 1200w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_2" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="ali-morshedlou" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
 						srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp 1200w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_3" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="jason goodman" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
 						srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp 1200w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_4" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="hannah busing" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
 						srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp 1200w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_5" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="ade tunji" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Mariages" class="gallery-item"
 						src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
 						srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp 1200w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_6" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="jakob owens" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Portrait" class="gallery-item"
 						src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
 						srcset="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp 1200w, ./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_7" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="nino van prattenburg" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Concert" class="gallery-item"
 						src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
 						srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp 1200w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_8" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="austin neill" loading="lazy">
 					<!-- alt ?? + / inutile -->
 					<img data-gallery-tag="Entreprises" class="gallery-item"
 						src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
 						srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp 1200w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-600.webp"
-						sizes="(max-width: 1200px) 100vw, 1200px" alt="image_9" loading="lazy">
+						sizes="(max-width: 1200px) 100vw, 1200px" alt="mateus campos" loading="lazy">
 					<!-- alt ?? + / inutile -->
 				</div>
 			</div>
@@ -201,7 +201,7 @@
 			</div>
 		</section>
 		<section id="services"> <!-- div ?? -->
-			<h3 class="title">Mes services</h3>
+			<h2 class="title">Mes services</h2>
 			<div class="container">
 				<div class="service">
 					<div class="service__description">
